Updates spacing in connection drawer and fixes word wrap in sample code

--- a/src/app/TabSections/ClusterConnectionDrawer.css
+++ b/src/app/TabSections/ClusterConnectionDrawer.css
@@ -8,3 +8,8 @@
 .pf-c-code-editor__main {
   height: 220px;
 }
+
+.pf-c-code-editor__code-pre {
+  white-space: normal;
+  word-break: break-word;
+}
